--- a/css/style.scss
+++ b/css/style.scss
@@ -1,19 +1,389 @@
+//imports
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,500&display=swap');
+
 // custom properties
 
 html{
 --blue1: #00e6fd;
 --blue2: #20c2ff;
---blue3: #0098e5;
---white: #ebfaff;
---black: #004b66;
+--blue3: #0085d3;
+--white: #cbe8f3;
+--black: #003e55;
+--orange: #f59f00;
+box-sizing:border-box;
 }
 
 // global
 
 .container{
-    display:grid;
-    grid-template-areas: 
-    "header"
-    "main"
-    "footer";
+    max-width: 100%;
+}
+
+body{
+    background-color: var(--white);
+    height: 100%;
+    width: 100%;
+}
+
+a{
+    color: var(--orange);
+    text-decoration: none;
+}
+
+h3{font-size: 2rem;}
+h5{font-size: 1rem;}
+
+// header
+
+header{
+    background-color:var(--blue3);
+    border-bottom: solid 2px var(--black); 
+    height: 10vh;
+    position: fixed;
+    width: 100%;
+    z-index:9999;
+    .logo{
+        display: inline;
+        height: 10vh;
+        margin-left: .2rem;
+    }
+    .location{
+        background-color: var(--white);
+        border-radius: 1rem;
+        border: solid 4px var(--black);
+        display: inline;
+        font-family: 'Trebuchet MS', sans-serif;
+        font-size: 2rem;
+        font-weight: 700;
+        height: 8vh;
+        line-height: 8vh;
+        margin-left: 10vw;
+        margin-top: 4px;
+        overflow:hidden;
+        padding: 0 .5rem;
+        position: absolute;
+        
+        .location-list{
+            list-style: none;
+            .top-list{
+                display:flex;
+                justify-content: center;
+                filter: brightness(.85)
+                
+            }
+            .li{
+                transition:font-size .1s ease-out;
+                &:hover{
+                    font-size: 2.2rem;
+                }
+            }
+            .s {color:red;}
+            .b {color: orange;}
+            .m {color: greenyellow;}
+            .g {color: blue;}
+            .c {color: purple;}
+        }
+    }
+}
+
+// main
+
+main{
+    padding-top: 10vh;
+    // display:grid;
+    // grid-template-areas: "promo-search""board""media""goals""customer";
+    // grid-template-rows: repeat(5, 1fr);
+    .promo-search{
+        grid-area:promo-search;
+        background-image: url(../pics/surfing-background.jpg);
+        background-position:50% 30%;
+        background-size: cover;
+        background-repeat: no-repeat;
+        display:grid;
+        justify-content: center;
+        height: 900px;
+        .heading-wrapper{
+            .heading{
+                color: var(--orange);
+                font-family:'Raleway', sans-serif;
+                font-size: 2.5rem;
+                font-weight: 700;
+                padding: .5rem 0;
+                margin: .5em 0;
+                text-align: center;
+                width: 60vw;
+                background-color: #08375265;
+            }
+        }
+        .search{
+            display:flex;
+            justify-content: center;
+            input{
+                border-radius: 1rem;
+                padding-left: .5rem;
+                border: solid 3px var(--orange);
+                background-color: var(--white);
+                font-weight: 900;
+                font-size: 2vh;
+                font-family: 'raleway';
+                height: 2em;
+                width: 40vw;
+                max-width: 20em;
+            }
+            button{
+                border-radius: 1rem;
+                height: 3rem;
+                margin-left: 5px;
+                border: solid 3px var(--orange);
+                background-color: var(--blue2);
+                &:active{
+                    background-color: var(--blue1);
+                }
+                &:hover img{
+                    filter: drop-shadow(1px 1px 3px var(--black));
+                }
+                img{
+                    height: 2rem;
+                }
+            }
+        }
+    }
+    .board{
+        
+        background:var(--white);
+        // background-size: contain;
+        margin: 1em 1em;
+        .board-selector{
+            margin-top: 5px;
+            background-color: var(--blue3);
+            display:flex;
+            justify-content: space-evenly;
+            margin-right: 6px;
+            .tab{
+                flex-grow:1;
+                text-align:center;
+                padding: 1em;
+                font-family: "raleway";
+                position:relative;
+                background-color: var(--blue3);
+                transition: background-color .2s ease-out;
+                &::before{
+                    content:'';
+                    background-color:black;
+                    width: 40%;
+                    left: 30%;
+                    height: 1px;
+                    position:absolute;
+                    top: 70%;
+                    transform:scaleX(0);
+                    transition:transform .2s ease-out;
+                }
+                &:hover::before{
+                    transform: scaleX(1);
+                }
+                &:hover{
+                    background-color: var(--blue2);
+                }
+            }
+        }
+        .board-screen{
+            .board-local{
+
+            }
+            .board-new{
+
+            }
+            .board-deals{
+
+            }
+            .here{
+                display:grid;
+                grid-template-columns: repeat(2, 1fr);
+                gap: 0;
+
+            }
+            .hid{
+                display: none;
+            }
+        }
+        .board-item{
+            background-color: white;
+            overflow:hidden;
+            margin-right: 6px;
+            margin-bottom: 6px;
+            a{
+                width:100%;
+                height:100%;
+                display:flex;
+                justify-content:center;
+                img{
+                    width:50vw;
+                    transition:transform .5s ease-in-out;
+                    transform:scale(.9);
+                    &:hover{
+                        transform:scale(1);
+                    }
+                }
+            }
+        }
+    }
+    .media{
+        grid-area: media;
+    }
+    .goals{
+        grid-area: goals;
+        background-image: url(../pics/surfshop.jpg);
+        background-size: cover;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-weight: 600; 
+        color: rgb(255, 255, 255);
+        display:flex;
+        justify-content: center;
+        margin: 2em 0;
+        border-top: solid 3px var(--black);
+        border-bottom: solid 3px var(--black);
+        .goals-contain{
+            background-color: rgba(0, 0, 0, 0.507);
+            margin: 2em;
+            max-width: 700px;
+            h2{
+                display:flex;
+                justify-content: center;
+                font-size: 2rem;
+                text-transform: uppercase;
+                padding-top: .5em;
+            }
+            div{
+                font-size: 1.5rem;
+                padding: .7em;
+                line-height: 1.3em;
+                position: relative;
+                &::before{
+                    content:'';
+                    background-color: rgb(255, 255, 255);
+                    position: absolute;
+                    width: 50%;
+                    left: 25%;
+                    top: .5em;
+                    height: 2px;
+                }
+            }
+        }
+    }
+    .customer{
+        grid-area:customer;
+        display:grid;
+        grid-template-columns: repeat(auto-fill, minmax(300px ,1fr));
+        a:hover h3{
+            color: var(--orange);
+        }
+        .customer-option{
+            border-radius: 1em;
+            border: solid 4px var(--black);
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+            margin: .5em;
+            overflow: hidden;
+            h3{
+                background-color: var(--blue3);
+                border-bottom: solid 3px var(--black);
+                color: var(--black);
+                letter-spacing: .3em;
+                padding: .5em;
+                text-align:center;
+                text-decoration: none;
+                text-transform: uppercase;
+                transition: color .2s ease-out;
+            }
+            h5{
+                background-color: var(--blue2);
+                color: var(--black);
+                line-height: 1.5em;
+                padding: .5em;
+            }
+        }
+    }
+}
+
+
+// footer
+
+footer{
+    grid-area:footer;
+    background-color: var(--black);
+    p{
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        font-size: 2rem;
+        max-width: 50%;
+    }
+}
+.social{
+    display:flex;
+    justify-content: space-evenly;
+    list-style: none;
+    width: 90vw;
+    padding: .5rem;
+    a .fa-facebook-square {
+        filter: brightness(0);
+        transition-property: filter, transform;
+        transition-duration: .2s, .2s;
+        transition-timing-function: ease-out, ease-out;
+        &:hover {
+            filter: brightness(1);
+            transform: scale(1.1);
+        }
+    }   
+    a .fa-linkedin {
+        filter: brightness(0);
+        transition-property: filter, transform;
+        transition-duration: .2s, .2s;
+        transition-timing-function: ease-out, ease-out;
+        &:hover {
+            filter: brightness(1);
+            transform: scale(1.1);
+        }
+    }
+    a .fa-github-square {
+        filter: invert(0%);
+        transition-property: filter, transform;
+        transition-duration: .2s, .2s;
+        transition-timing-function: ease-out, ease-out;
+        &:hover {
+            filter: invert(40%);
+            transform: scale(1.2);
+        }
+    }
+    a .fa-envelope {
+        filter: invert(0%);
+        transition-property: filter, transform;
+        transition-duration: .2s, .2s;
+        transition-timing-function: ease-out, ease-out;
+        &:hover {
+            filter: invert(40%);
+            transform: scale(1.2);
+        }
+    }
+    .pic{
+        width: 50px;
+        height: 50px;
+    }
+}
+
+.help{
+    background-color: var(--orange);
+    border: solid 2px black;
+    color:black;
+    border-radius: 1rem;
+    font-family: helvetica;
+    font-size: 2rem;
+    font-weight: 700;
+    padding: 2px .5rem;
+    position: fixed;
+    z-index: 5;
+    bottom: 1rem;
+    right: 1rem;
+    transition:background-color .2s ease-in;
+    &:hover{
+        background-color: rgb(255, 217, 0);
+        cursor: pointer;
+    }
 }
