--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,17 @@ header {
   z-index: 9999;
 }
 
+header .progress {
+  width: 100%;
+  height: 6px;
+}
+
+header .progress .progress-info {
+  height: 6px;
+  background-color: var(--orange);
+  width: 0;
+}
+
 header .logo {
   display: inline;
   height: 10vh;
@@ -57,10 +68,10 @@ header .location {
   font-family: 'Trebuchet MS', sans-serif;
   font-size: 2rem;
   font-weight: 700;
-  height: 8vh;
-  line-height: 8vh;
+  height: 2em;
+  line-height: 2em;
   margin-left: 10vw;
-  margin-top: 4px;
+  margin-top: .3em;
   overflow: hidden;
   padding: 0 .5rem;
   position: absolute;
