--- a/css/style.scss
+++ b/css/style.scss
@@ -42,6 +42,15 @@ header{
     position: fixed;
     width: 100%;
     z-index:9999;
+    .progress{
+        width:100%;
+        height:6px;
+        .progress-info{
+            height:6px;
+            background-color: var(--orange);
+            width:0;
+        }
+    }
     .logo{
         display: inline;
         height: 10vh;
@@ -55,10 +64,10 @@ header{
         font-family: 'Trebuchet MS', sans-serif;
         font-size: 2rem;
         font-weight: 700;
-        height: 8vh;
-        line-height: 8vh;
+        height: 2em;
+        line-height: 2em;
         margin-left: 10vw;
-        margin-top: 4px;
+        margin-top: .3em;
         overflow:hidden;
         padding: 0 .5rem;
         position: absolute;
