--- a/css/style.scss
+++ b/css/style.scss
@@ -11,6 +11,10 @@ html{
 --black: #003e55;
 --orange: #f59f00;
 box-sizing:border-box;
+--h-size: 4rem;
+--h-fit: calc(var(--h-size)*.9);
+--h-loco: calc(var(--h-size)*.6);
+scroll-behavior: smooth;
 }
 
 // global
@@ -30,7 +34,11 @@ a{
     text-decoration: none;
 }
 
+p{cursor: default;}
+
+h2{font-size: 2.5rem;}
 h3{font-size: 2rem;}
+h4{font-size: 1.5rem;}
 h5{font-size: 1rem;}
 
 // header
@@ -38,7 +46,7 @@ h5{font-size: 1rem;}
 header{
     background-color:var(--blue3);
     border-bottom: solid 2px var(--black); 
-    height: 10vh;
+    height: var(--h-size);
     position: fixed;
     width: 100%;
     z-index:9999;
@@ -51,55 +59,90 @@ header{
             width:0;
         }
     }
-    .logo{
-        display: inline;
-        height: 10vh;
-        margin-left: .2rem;
-    }
-    .location{
-        background-color: var(--white);
-        border-radius: 1rem;
-        border: solid 4px var(--black);
-        display: inline;
-        font-family: 'Trebuchet MS', sans-serif;
-        font-size: 2rem;
-        font-weight: 700;
-        height: 2em;
-        line-height: 2em;
-        margin-left: 10vw;
-        margin-top: .3em;
-        overflow:hidden;
-        padding: 0 .5rem;
-        position: absolute;
-        
-        .location-list{
-            list-style: none;
-            .top-list{
-                display:flex;
-                justify-content: center;
-                filter: brightness(.85);
-                transition:font-size .1s ease-out;
-                &:hover{
-                    font-size: 2.2rem;
+    .header-container{
+        display:flex;
+        justify-content: space-between;
+        .logo{
+            height: var(--h-fit);
+            margin-left: .2rem;
+        }
+        .location{
+            background-color: var(--white);
+            border-radius: 1rem;
+            border: solid 4px var(--black);
+            font-family: 'Trebuchet MS', sans-serif;
+            font-size: calc(var(--h-fit)*.5);
+            font-weight: 700;
+            height: var(--h-loco);
+            line-height: var(--h-loco);
+            margin-top: .4rem;
+            overflow:hidden;
+            padding: 0 .5rem;
+            .location-list{
+                list-style: none;
+                transition:transform .5s ease-out;
+                .top-list{
+                    display:flex;
+                    justify-content: center;
+                    filter: brightness(.85);
                 }
+                .s {color:red;}
+                .b {color: orange;}
+                .m {color: greenyellow;}
+                .g {color: blue;}
+                .c {color: purple;}
             }
-            .s {color:red;}
-            .b {color: orange;}
-            .m {color: greenyellow;}
-            .g {color: blue;}
-            .c {color: purple;}
+        }
+        .menu-icon{
+            margin-top: .5rem;
+            height: var(--h-loco);
+            margin-right: 1em;
+            &:active{
+                filter: brightness(1.4);
+            }
+        }
+        
+    }
+    .sidebar{
+        background-color: var(--black);
+        border-radius: 0 0 0 0.9em;
+        color: var(--blue3);
+        display:grid;
+        flex-wrap: wrap;
+        font-family: 'Raleway';
+        font-size: 3rem;
+        justify-content: stretch;
+        line-height: 1.5em;
+        list-style: none;
+        margin-left: 105%;
+        overflow:hidden;
+        position:fixed;
+        top: var(--h-size);
+        transition: transform .5s cubic-bezier(.63,.43,.4,1.25);
+        filter: drop-shadow(0 4px 4px black);
+        .nav{
+            color: var(--orange);
+            cursor: pointer;
+            display: inline-block;
+            padding-left: 2rem;
+            padding-right: 5rem;
+            transition: background-color .3s ease-out;
+            width: 100%;
+            &:hover{
+                background-color: var(--blue3);
+            }
         }
     }
 }
 
-.drop-bottom{
-    height: fit-content;
+.menu-active{
+    transform: translateX(-22rem) !important;
 }
 
 // main
 
 main{
-    padding-top: 10vh;
+    padding-top: var(--h-size);
     display:grid;
     grid-template-areas: "promo-search""board""media""goals""customer";
     .promo-search{
@@ -113,18 +156,18 @@ main{
         height: 900px;
         .heading-wrapper{
             .heading{
+                background-color: #1ca1d162;
+                border-radius: 0 1em 0 1em;
+                border: solid 3px var(--black);
                 color: var(--orange);
                 font-family:'Raleway', sans-serif;
                 font-size: 2.5rem;
                 font-weight: 700;
-                padding: .5rem 1.4rem;
                 margin: .5em;
+                max-width: max-content;
+                padding: .5rem 1.4rem;
                 text-align: center;
                 width: 60vw;
-                background-color: #1ca1d162;
-                border: solid 3px var(--black);
-                border-radius: 0 1em 0 1em;
-                max-width: max-content;
             }
         }
         .search{
@@ -136,9 +179,9 @@ main{
                 border: solid 3px var(--orange);
                 background-color: var(--white);
                 font-weight: 900;
-                font-size: 2vh;
+                font-size: 1.2rem;
                 font-family: 'raleway';
-                height: 2em;
+                height: 2.5rem;
                 width: 40vw;
                 max-width: 20em;
             }
@@ -149,6 +192,7 @@ main{
                 border: solid 3px var(--orange);
                 background-color: var(--blue2);
                 transition: background-color .2s ease-out;
+                cursor: pointer;
                 &:hover{
                     background-color: var(--blue1);
                 }
@@ -167,15 +211,17 @@ main{
             margin-top: 5px;
             background-color: var(--blue3);
             display:flex;
-            justify-content: space-evenly;
-            margin-right: 6px;
+            justify-content: space-between;
             position:sticky;
+            top: calc(var(--h-size) + 2px);
+            z-index: 9998;
             .tab{
                 flex-grow:1;
                 text-align:center;
                 padding: 1em;
+                width: 33.33%;
                 font-family: "raleway";
-                position:relative;
+                position: relative;
                 background-color: var(--blue3);
                 transition: filter .2s ease-out;
                 &::before{
@@ -198,35 +244,29 @@ main{
             }
             .bg-active{background-color: rgb(255, 28, 104);}
         }
+
+        // Displays the boards grid
         .board-screen{
-            .board-local{
-
-            }
-            .board-new{
-
-            }
-            .board-deals{
-
+            .board-grid{
+                display:none;
+                opacity: 0;
+                transition: opacity .5s linear;
             }
             .here{
-                display:grid;
+                display:grid !important;
                 grid-template-columns: repeat(auto-fill (100px, 1fr));
-                gap: 0;
-            }
-            .hid{
-                display: none;
+                gap: 0.2rem;
+                opacity: 1;
             }
         }
         .board-item{
             background-color: white;
             overflow:hidden;
-            margin-right: 6px;
-            margin-bottom: 6px;
             a{
-                width:100%;
-                height:100%;
                 display:flex;
+                height:100%;
                 justify-content:center;
+                width:100%;
                 &:hover img{
                     transform:scale(1);
                 }
@@ -239,29 +279,28 @@ main{
         }
     }
     .media{
-        grid-area: media;
         display:flex;
+        grid-area: media;
         justify-content: space-around;
+        margin-left: 10%;
         position:relative;
-        max-width: 1200px;
+        width: 80%;
         .arrow-wrapper{
             display:flex;
             flex-direction:column;
             justify-content: center;
             position:relative;
             .arrow-anchor{
-                margin: 5px;
                 display:flex;
                 justify-content:center;
+                margin: 5px;
                 padding:5px;
-                border: solid 2px rgba(255, 255, 255, 0);
-                &:hover{
-                    border: solid 2px var(--orange); 
-                }
                 .arrow{
+                    border: solid 2px rgba(255, 255, 255, 0);
                     width: 3vw;
-                    position:absolute;
-
+                    &:hover{
+                        border: solid 2px var(--orange); 
+                    }
                 }
                 .face-right{
                     transform: rotate(180deg);
@@ -269,94 +308,105 @@ main{
             }
         }
         .media-frame{
-            width: 90%;
-            position:relative;
-            padding-top: 46%;
             justify-self: center;
+            padding-top: 46%;
+            position:relative;
+            width: 90%;
             .frame1{
-                position:absolute;
-                top:0;
-                left:0;
-                bottom:0;
-                right:0;
-                width:99.5%;
-                height:100%;
-                border: solid 3px var(--black);
                 border-radius: 2em;
+                border: solid 3px var(--black);
+                bottom:0;
+                height:100%;
+                left:0;
+                position:absolute;
+                right:0;
+                top:0;
+                width:99.5%;
             }
         }
     }
     .goals{
-        grid-area: goals;
         background-image: url(../pics/surfshop.jpg);
         background-size: cover;
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        font-weight: 600; 
+        border-bottom: solid 3px var(--black);
+        border-top: solid 3px var(--black);
         color: rgb(255, 255, 255);
         display:flex;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-weight: 600; 
+        grid-area: goals;
         justify-content: center;
         margin: 2em 0;
-        border-top: solid 3px var(--black);
-        border-bottom: solid 3px var(--black);
         .goals-contain{
-            background-color: rgba(0, 0, 0, 0.507);
+            display:flex;
+            flex-direction: column;
+            justify-content: center;
             margin: 2em;
-            max-width: 700px;
-            h2{
-                display:flex;
-                justify-content: center;
-                font-size: 2rem;
-                text-transform: uppercase;
-                padding-top: .5em;
-            }
-            div{
-                font-size: 1.5rem;
-                padding: .7em;
-                line-height: 1.3em;
-                position: relative;
-                &::before{
-                    content:'';
-                    background-color: rgb(255, 255, 255);
-                    position: absolute;
-                    width: 50%;
-                    left: 25%;
-                    top: .5em;
-                    height: 2px;
+            max-width: 1000px;
+            min-height: 80vh;
+            .goals-wrapper{
+                background-color: rgba(26, 26, 26, 0.507);
+                cursor: default;
+                border-radius: 4rem;
+                border: 1px solid rgba(146, 146, 146, 0.507);
+                filter: drop-shadow(0 0 3px rgba(165, 165, 165, 0.507));
+                h2{
+                    display:flex;
+                    justify-content: center;
+                    padding-top: .5em;
+                    text-align:center;
+                    text-transform: uppercase;
+                }
+                h4{
+                    line-height: 1.5em;
+                    padding: .7em;
+                    position: relative;
+                    text-align:center;
+                    &::before{
+                        background-color: rgb(255, 255, 255);
+                        content:'';
+                        height: 2px;
+                        left: 25%;
+                        position: absolute;
+                        top: .5em;
+                        width: 50%;
+                    }
                 }
             }
         }
     }
     .customer{
         grid-area:customer;
-        display:grid;
-        grid-template-columns: repeat(auto-fill, minmax(300px ,1fr));
-        justify-content: space-between;
-        a:hover h3{
-            color: var(--orange);
-        }
-        .customer-option{
-            border-radius: 1em;
-            border: solid 4px var(--black);
-            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-            margin: .5em;
-            overflow: hidden;
-            h3{
-                background-color: var(--blue3);
-                border-bottom: solid 3px var(--black);
-                color: var(--black);
-                letter-spacing: .3em;
-                padding: .4em;
-                text-align:center;
-                text-decoration: none;
-                text-transform: uppercase;
-                transition: color .2s ease-out;
+        .customer-container{
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+            width:100%;
+            a:hover h3{
+                color: var(--orange);
             }
-            h5{
-                background-color: var(--blue2);
-                color: var(--black);
-                line-height: 1.5em;
-                padding: .5em;
-                min-height:190px; 
+            .customer-option{
+                border-radius: 1em;
+                border: solid 4px var(--black);
+                font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+                margin: 1em;
+                overflow: hidden;
+                h3{
+                    background-color: var(--blue3);
+                    border-bottom: solid 3px var(--black);
+                    color: var(--black);
+                    letter-spacing: .2em;
+                    padding: .4em;
+                    text-align:center;
+                    text-decoration: none;
+                    text-transform: uppercase;
+                    transition: color .2s ease-out;
+                }
+                h5{
+                    background-color: var(--blue2);
+                    color: var(--black);
+                    line-height: 1.5em;
+                    padding: .5em;
+                }
             }
         }
     }
@@ -368,18 +418,19 @@ main{
 footer{
     grid-area:footer;
     background-color: var(--black);
+    border: solid 5px var(--black);
     p{
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         font-size: 2rem;
-        max-width: 50%;
+        max-width: 70%;
     }
 }
 .social{
     display:flex;
     justify-content: space-evenly;
     list-style: none;
-    width: 90vw;
     padding: .5rem;
+    width: 90vw;
     a .fa-facebook-square {
         filter: brightness(0);
         transition-property: filter, transform;
@@ -428,20 +479,36 @@ footer{
 
 .help{
     background-color: var(--orange);
-    border: solid 2px black;
-    color:black;
     border-radius: 1rem;
+    border: solid 2px black;
+    bottom: 1rem;
+    color:black;
     font-family: helvetica;
     font-size: 2rem;
     font-weight: 700;
     padding: 2px .5rem;
     position: fixed;
-    z-index: 5;
-    bottom: 1rem;
     right: 1rem;
     transition:background-color .2s ease-in;
+    z-index: 10000;
     &:hover{
         background-color: rgb(255, 217, 0);
         cursor: pointer;
     }
+}
+
+
+// Media Queries
+
+@media only screen and (min-width: 500px) {
+    h2{font-size: 2.5rem;}
+    h3{font-size: 2rem;}
+    h4{font-size: 1.5rem;}
+    h5{font-size: 1rem;}
+}
+@media only screen and (min-width: 800px) {
+    h2{font-size: 3rem;}
+    h3{font-size: 2.5rem;}
+    h4{font-size: 2rem;}
+    h5{font-size: 1.5rem;}
 }
