--- a/css/style.css
+++ b/css/style.css
@@ -202,7 +202,7 @@ main {
       grid-template-areas: "promo-search" "board" "media" "goals" "customer";
 }
 
-main .promo-search {
+main .search {
   -ms-grid-row: 1;
   -ms-grid-column: 1;
   grid-area: promo-search;
@@ -218,7 +218,7 @@ main .promo-search {
   height: 900px;
 }
 
-main .promo-search .heading-wrapper .heading {
+main .search .heading-wrapper .heading {
   background-color: #1ca1d162;
   border-radius: 0 1em 0 1em;
   border: solid 3px var(--black);
@@ -235,7 +235,7 @@ main .promo-search .heading-wrapper .heading {
   width: 60vw;
 }
 
-main .promo-search .search {
+main .search .promo-search {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -244,7 +244,7 @@ main .promo-search .search {
           justify-content: center;
 }
 
-main .promo-search .search input {
+main .search .promo-search input {
   border-radius: 1rem;
   padding-left: .5rem;
   border: solid 3px var(--orange);
@@ -257,7 +257,7 @@ main .promo-search .search input {
   max-width: 20em;
 }
 
-main .promo-search .search button {
+main .search .promo-search button {
   border-radius: 1rem;
   height: 3rem;
   margin-left: 5px;
@@ -268,16 +268,16 @@ main .promo-search .search button {
   cursor: pointer;
 }
 
-main .promo-search .search button:hover {
+main .search .promo-search button:hover {
   background-color: var(--blue1);
 }
 
-main .promo-search .search button:active {
+main .search .promo-search button:active {
   -webkit-filter: hue-rotate(205deg);
           filter: hue-rotate(205deg);
 }
 
-main .promo-search .search button img {
+main .search .promo-search button img {
   height: 2rem;
 }
 
@@ -288,6 +288,7 @@ main .board {
 main .board .board-selector {
   margin-top: 5px;
   background-color: var(--blue3);
+  cursor: pointer;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
