--- a/css/style.scss
+++ b/css/style.scss
@@ -145,7 +145,7 @@ main{
     padding-top: var(--h-size);
     display:grid;
     grid-template-areas: "promo-search""board""media""goals""customer";
-    .promo-search{
+    .search{
         grid-area:promo-search;
         background-image: url(../pics/surfing-background.jpg);
         background-position:50% 30%;
@@ -170,7 +170,7 @@ main{
                 width: 60vw;
             }
         }
-        .search{
+        .promo-search{
             display:flex;
             justify-content: center;
             input{
@@ -210,6 +210,7 @@ main{
         .board-selector{
             margin-top: 5px;
             background-color: var(--blue3);
+            cursor: pointer;
             display:flex;
             justify-content: space-between;
             position:sticky;
